syntax = "proto3";

package courier;


option go_package = "proto/delivery.proto";

// The Delivery service definition.
service Delivery {

  rpc getEstimateDeliveryValues (EstimateDeliveryRequest) returns (EstimateDeliveryResponse) {}

  rpc assignOrder (AssignOrderRequest) returns (AssignOrderResponse){}

}

// The request message containing the user's data.
message EstimateDeliveryRequest {
  int64 ConsumerID = 1;
  int64 RestaurantID = 2;
}

message EstimateDeliveryResponse {
  string  Time = 1;
  string Cost = 2;
}

message AssignOrderRequest {
  int64 FromUserID = 1;
  int64 RestaurantID = 2;
}

message AssignOrderResponse {
  int64 OrderID = 1;
  int64 CourierID = 2;
}